# engineer-logs

./: .gitignore  README.md  _engineer-daily-report-dashboard.jsx.backup  database_erd.md  docker-compose.yml  minor_adjustments_documentation.md  rbac_plan.md  sprint_1_documentation.md  sprint_2_documentation.md  sprint_3_documentation.md  sprint_4_documentation.md  sprint_plan.md  start.sh
daily-report-backend/: .dockerignore  Dockerfile  checkUsers.ts  dev.db  docker-compose.yml  jest.config.js  package-lock.json  package.json  telegram_sessions.json  tsconfig.json
daily-report-backend/prisma/: dev.db  schema.prisma
daily-report-backend/src/: app.ts  checkRoles.ts  checkUserRoles.ts  checkdb.ts  clear.ts  seed.ts  server.ts
daily-report-backend/src/__tests__/: activity.test.ts  auth.test.ts  authMiddleware.test.ts  setup.ts
daily-report-backend/src/bot/: telegramBot.ts  utils.ts
daily-report-backend/src/controllers/: activationController.ts  activityController.ts  auditController.ts  authController.ts  cliController.ts  customerController.ts  dashboardController.ts  inviteController.ts  jiraController.ts  kpiController.ts  maintenanceController.ts  reportController.ts  settingsController.ts  taxonomyController.ts  telegramController.ts  userController.ts
daily-report-dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
daily-report-dashboard/src/: App.jsx  index.css  main.jsx
engineerlog-cli/: .gitignore  Cargo.toml
engineerlog-cli/src/: main.rs
kpi/: KPI_PROVISIONAL_PSEUDOCODE.md  KPI_UNDERSTANDING.md
(+68 files in other folders)
