[package]
name = "elog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "elog"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rsa = { version = "0.9", features = ["sha2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signature = "2.2"
uuid = { version = "1.11", features = ["v4"] }
